force-app/main/default/objects/sugati__Invoice_Number__c/sugati__Invoice_Number__c.object-meta.xml
<CustomObject>
    <label>Invoice Number</label>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>