force-app/main/default/objects/sugati__Invoice_Number__c/fields/sugati__IN_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__IN_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoice Numbers</relationshipLabel>
    <relationshipName>Invoice_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>