force-app/main/default/objects/sugati__Invoice_Number__c/fields/sugati__IN_Last_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__IN_Last_Invoice_Number__c</fullName>
    <label>Last Invoice Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>