force-app/main/default/objects/sugati__Invoice_Number__c/fields/sugati__IN_Office__c.field-meta.xml
<CustomField>
    <fullName>sugati__IN_Office__c</fullName>
    <label>Office</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>